[tool.poetry]
name = "power_electronics_workbench"
version = "0.1.0"
description = "A workbench styled python library for assisting the users to design power electronics."
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "power_electronics_workbench"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
Sphinx = "^6.1.3"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
pylint = "^2.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"